# CDX12

./: .gitignore  CMakeLists.txt  README.md  TODOS.md
UGraphviz/: CMakeLists.txt
UGraphviz/src/core/: Graph.cpp  Registry.cpp  Subgraph.cpp
docs/mindmap/: Descriptor_Heap.xmind
include/CDX12/: Blob.h  CDX12.h  D3DInclude.h  DXUtil.h  DescriptorHeapMngr.h  Device.h  FrameResource.h  FrameResourceMngr.h  Mesh.h  RenderResourceMngr.h  UploadBuffer.h  VarSizeAllocMngr.h
include/CDX12/Common/: DDSTextureLoader.h  DX12App.h  GameTimer.h  GeometryGenerator.h  GlobalSamplers.h
include/CDX12/DescripitorHeap/: CPUDescriptorHeap.h  DescriptorAllocation.h  DescriptorAllocatonMngr.h  DescriptorHeapAllocation.h  DescriptorHeapAllocationMngr.h  DescriptorHeapWrapper.h  GPUDescriptorHeap.h  IDescriptorAllocator.h
include/CDX12/FrameGraph/: Executor.h  Rsrc.h  RsrcMngr.h
include/CDX12/Geometry/: Mesh.h  MeshMngr.h
include/CDX12/Material/: MaterialMngr.h  Texture.h  TextureMngr.h
include/CDX12/Math/: MathHelper.h  Quaternion.h
include/CDX12/Resource/: MeshGPUBuffer.h  ResourceDeleteBatch.h  UploadBuffer.h
include/CDX12/Shader/: BasicShader.h  GlobalSamplers.h  PSOManager.h  Shader.h  ShaderMngr.h
include/CDX12/details/: UploadBuffer.inl
src/core/: Blob.cpp  D3DInclude.cpp  DXUtil.cpp  Device.cpp  FrameResource.cpp  FrameResourceMngr.cpp  GCmdList.cpp  RenderResourceMngr.cpp  UploadBuffer.cpp  VarSizeAllocMngr.cpp
src/core/Common/: DDSTextureLoader.cpp  DX12App.cpp  GameTimer.cpp  GeometryGenerator.cpp  GlobalSamplers.cpp
src/core/DescriptorHeap/: CPUDescriptorHeap.cpp  DescriptorAllocation.cpp  DescriptorHeapAllocationMngr.cpp  DynamicSuballocMngr.cpp  GPUDescriptorHeap.cpp
src/core/FrameGraph/: Executor.cpp  RsrcMngr.cpp
src/core/Geometry/: MeshMngr.cpp
src/core/Material/: MaterialMngr.cpp  Texture.cpp  TextureMngr.cpp
src/core/Resource/: MeshGPUBuffer.cpp  ResourceDeleteBatch.cpp  UploadBuffer.cpp
src/core/Shader/: BasicShader.cpp  GlobalSamplers.cpp  PSOManager.cpp  Shader.cpp  ShaderMngr.cpp
